src/SmartHotel360-public-web/manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: publicweb
spec:
  template:
    metadata:
      labels:
        app: smarthotels
        component: publicweb
    spec:
      containers:
      - name: publicweb
        image: <registry>/<org>/publicweb:<tag>
        imagePullPolicy: Always
        ports:
        - containerPort: 80
