src/SmartHotel360-public-web/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sh360
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: sh360.de44228e-2c3e-4bd8-98df-cdc6e54e272a.eastus.aksapp.io
      http:
        paths:
        - backend:
            serviceName: publicweb
            servicePort: 80
          path: /
